intTests/test_parse_errors/parser005.log.good
Loading file "parser005.saw"
Error: Parse error at parser005.saw:2:5-2:15: Unexpected `rebindable'
FAILED
