intTests/test_parse_errors/parser005.saw
// "rebindable" is not allowed in rec-bindings
rec rebindable f0 () = f1 ()
and f1 () = f0 ();
